--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1084,7 +1084,7 @@
 }
 #pages-home .element-slider-suggestion .carousel__view {
   width: 95%;
-  height: 400px;
+  height: 450px;
   background: white;
   margin: 0 auto 5% auto;
   overflow: hidden;
@@ -1092,8 +1092,6 @@
 }
 #pages-home .element-slider-suggestion .carousel__view .product-list {
   position: absolute;
-  margin: 0;
-  padding: 0%;
   transition: transform 0.3s;
   transform: translateX(0px);
   list-style: none;
@@ -1165,8 +1163,7 @@
   will-change: transform, transition;
 }
 #pages-home .element-slider-suggestion .carousel__view .swiper-pagination {
-  border: 2px solid red;
-  margin-top: 20px !important;
+  bottom: 15px !important;
 }
 #pages-home .element-slider-suggestion .carousel__view .swiper-pagination .swiper-pagination-bullet {
   background: black !important;
@@ -1174,7 +1171,7 @@
 #pages-home .element-slider-suggestion .carousel__view .swiper-button-next::after,
 #pages-home .element-slider-suggestion .carousel__view .swiper-button-prev::after {
   color: rgba(0, 0, 0, 0.6);
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 #page-creation {
